fix: Add Legal Hold status to Reaction (WEBFOUND-59) (#834)
